# interaction-particule

./: Cargo.toml  README.md  rules.json
src/: ball.rs  config_constant.rs  main.rs  particule.rs
