[package]
name = "interaction-particule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.x"
num = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.gtk]
package = "gtk4"
version = "0.6.6"
features = ["v4_2"]